--- a/style.css
+++ b/style.css
@@ -1,648 +1,420 @@
 /* GLOBAL */
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 
-@font-face {
-    font-family: 'Montserrat';
-    src: url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
-    font-display: swap;
-}
-
-:root {
-    --light-color: #ececec;
-    --dark-color: rgb(59, 59, 59);
-    --header-light-color: rgb(150, 149, 149);
-}
-
 html {
     font-size: 26px;
     font-family: 'Montserrat', sans-serif;
     font-display: fallback;
-    color: #888888;
-    background: #2E2E2E;
+    font-size: 4vmin;
+    height: 100%;
+    letter-spacing: 5px;
+    overflow-x: hidden;
 }
 
 * {
     margin: 0;
+    padding: 0;
+    scroll-behavior: smooth;
 }
 
-
-li {
-    display: inline;
+:root {
+    --theme-color: rgb(251, 163, 63);
+    --theme-color2: rgba(252, 70, 70, 1);
+    --bg-gradient: linear-gradient(53deg, var(--theme-color) 0%, var(--theme-color2) 100%);
 }
 
 a {
     color: inherit;
-    text-decoration: none;
+    text-decoration: unset;
 }
 
-p {
-    font-size: 4vmin;
-    line-height: 1.5;
+li {
+    display: inline;
 }
 
 img {
     width: 100%;
 }
 
+h1 {
+    font-size: 2rem;
+}
+
 h1,
-h2,
-h3,
-h4 {
+h2 {
     text-transform: uppercase;
 }
 
-h1 {
-    font-size: 3rem;
-    margin-bottom: 2.5rem;
+h2 {
+    color: var(--theme-color2);
 }
 
-hr {
-    width: 70%;
-    margin: 0 auto;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-    border: solid 1px gray;
-}
-
-
-form {
-    display: flex;
-    width: 80%;
-}
-
-form label {
+#dot_nav {
+    width: inherit;
+    width: fit-content;
+    position: fixed;
     display: flex;
     flex-direction: column;
-    width: 100%;
+    justify-content: space-evenly;
+    height: 40vh;
+    right: 1%;
+    bottom: 10%;
+    font-size: 11vmin;
+    color: rgba(0, 0, 0, 0.2);
 }
 
 
-input {
-    height: 3vw;
+.global_spacing {
+    padding: 5%;
 }
 
-textarea {
-    height: 70%;
-    display: block;
-    resize: unset;
-    font-family: inherit;
-    padding: 20px;
-}
 
-input,
-textarea,
-.submit,
-.cancel {
-    padding: 10px;
-    margin: 0 0.5vw 1vw;
-    border-radius: 8px;
-    border: none;
-    font-size: 0.7rem;
-}
-
-.submit {
-    background: #23846A;
-}
-
-.cancel {
-    background: #953A3A;
-
-}
-
-.submit,
-.cancel {
-    padding: 0 10px;
+.cta {
+    padding: 20px 30px;
+    background: var(--theme-color);
+    background: linear-gradient(53deg, var(--theme-color) 0%, var(--theme-color2) 100%);
+    border-radius: 100px;
     color: #fff;
-    text-align: start;
-    height: 5vw !important;
+    text-align: right;
+    font-weight: bold;
+    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.2);
+    font-size: 0.9em;
 }
-
 
 
 #about,
 #portfolio,
 #contact {
+    text-align: center;
+}
+
+
+#home,
+#about,
+#portfolio,
+#contact {
+    height: fit-content;
     min-height: 100vh;
 }
 
-.header_content,
-.header_img,
-.project-info,
-.wrap,
-.socials,
-.socials div {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
 
-.section_wrap {
-    padding: 13vw 8vw 4vw;
-}
 
-/* Side (Dotted) Navigation */
-#dot_nav {
-    position: fixed;
-    right: 10px;
-    bottom: 2.5vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 40vh;
-    font-size: 1.3rem;
-    color: #D1D1D1;
-    z-index: 99;
-}
 
-#dot_nav li {
-    display: list-item;
-}
-
-/* Header */
+/* Home Page*/
 header {
-    height: 100vh;
-    display: grid;
-    grid-auto-rows: 1fr 1fr;
-    background-color: var(--dark-color);
+    z-index: 1;
 }
 
 header nav {
-    font-size: 0.8rem;
-    position: fixed;
-    width: 90%;
-    z-index: 1;
-    padding: 3vw 5vw 0;
+    display: grid;
+    grid-template-columns: auto auto;
+    font-size: 0.9em;
+    align-items: center;
+}
+
+header nav div:nth-child(1) img {
+    width: 50px;
+}
+
+header nav div:nth-child(2) {
     text-align: right;
+    padding-right: 40px;
 }
 
-header nav li {
-    padding-left: 5%;
-    text-transform: capitalize;
+header nav ul {
+    width: 100%;
 }
 
-#toggle_menu {
-    display: none;
+header nav li:nth-child(2) {
+    padding: 0 5%;
 }
 
-.header_content {
-    grid-row: 2;
-    background-color: whitesmoke;
-    display: flex;
+
+.header-content {
+    padding: 7% 10%;
+    text-align: center;
     position: relative;
 }
 
-.header_img {
-    background: radial-gradient(#5D5D5D -85%, #2E2E2E) no-repeat;
-    background-color: #5D5D5D;
-    box-shadow: 0px 2px 66px 0px rgba(0, 0, 0, 0.35);
-    position: absolute;
-    top: -45%;
-    border-radius: 50%;
-    width: 25vw;
-    height: 25vw;
-    max-width: 250px;
-    max-height: 250px;
+.header-content h1 {
+    font-size: 3.2rem;
+    text-transform: capitalize;
+    display: flex;
+    flex-direction: column;
+    text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.1);
 }
 
-.header_img img {
-    width: 50%;
+.header-content h1::before,
+.header-content h1::after {
+    font-size: 1rem;
+    color: rgba(0, 0, 0, 0.70);
+    text-shadow: none;
 }
 
-.header_text {
-    margin: 8vw 8vw 4vw;
-}
-
-.header_text h1 {
-    font-size: 7vw;
-    margin-bottom: 0;
-}
-
-.header_text::before {
+.header-content h1::before {
     content: "Hi I'm";
-    color: var(--header-light-color);
+    margin-bottom: 3%;
 }
 
-.header_text::after {
-    content: "a full-stack web developer";
-    color: var(--header-light-color);
-    float: right;
+.header-content h1::after {
+    content: "A Full-Stack Web Developer";
+    margin-top: 3%;
 }
+
 
 /* About Page */
 #about {
-    background: #fff;
+    text-align: center;
 }
 
-#about .section_wrap {
-    position: relative;
-}
-
-/* .split {
-    display: grid;
-    grid-template-columns: 80% 30%;
-    grid-gap: 4vw;
-} */
 #about p {
-    width: 80%;
-    margin-right: 20px;
+    margin: 5% 0;
 }
 
 #about img {
-    width: 150px;
-    height: 170px;
-    position: absolute;
-    right: 8vw;
-    bottom: 5vw;
+    width: 10%;
 }
 
 /* Portfolio page */
-#portfolio {
-    background: var(--dark-color);
-    color: var(--light-color);
-}
-
 .projects {
-    display: flex;
-    justify-content: space-around;
-}
-
-.project {
-    overflow: hidden;
-    width: 30%;
-    min-height: 34%;
-    background: red;
-    object-fit: contain;
-    border-radius: 5px;
-    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
-    font-size: 2.5vw;
-    text-align: center;
-    transition: ease-out 150ms;
-}
-
-.project:hover {
-    width: 28vw;
-    transition: ease-in 250ms;
-}
-
-
-.project img {
-    width: 18%;
-}
-
-.project p {
-    font-size: 0.8em;
-    padding: 5px 1.75vw;
+    margin-top: 5%;
+    display: grid;
+    grid-template-areas: 'a b c''d d d';
+    grid-gap: 3%;
 }
 
 .project:nth-child(1) {
-    background: url('resources/todolist_scrn.png') no-repeat;
+    grid-area: a;
 }
 
 .project:nth-child(2) {
-    background: url('resources/books_scrn.png') no-repeat;
+    grid-area: b;
 }
 
 .project:nth-child(3) {
-    background: url('resources/simpleSearch_scrn.png') no-repeat;
+    grid-area: c;
 }
 
-.project:nth-child(1),
-.project:nth-child(2),
-.project:nth-child(3) {
+.project {
+    width: 100%;
+    font-size: 2.6vmin;
+    text-align: center;
+    border: 1px solid rgba(0, 0, 0, 0.35);
+    border-radius: 4px;
+    overflow: hidden;
+}
+
+.prj-img {
+    height: 40vh;
+}
+
+.prj-1 {
+    background: url('resources/todolist_scrn.png');
+}
+
+.prj-2 {
+    background: url('resources/simpleSearch_scrn.png');
+}
+
+.prj-3 {
+    background: url('resources/books_scrn.png');
+}
+
+.prj-1,
+.prj-2,
+.prj-3 {
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
+}
+
+.prj-desc {
+    padding: 5%;
+    background-color: #fff;
 }
 
 
-
-.project-info {
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.75);
-    opacity: 0;
+.prj-tags {
+    margin-top: 5%;
+    letter-spacing: 3px;
 }
 
-.project-info li {
-    font-size: 0.6em;
-    color: rgb(238, 238, 238);
-    padding: 5px 1.75vw;
-    background: #5D5D5D;
-    border-radius: 10vw;
-    box-shadow: 0px 2px 66px 0px rgba(0, 0, 0, 0.75);
+.prj-tags ul {
+    color: rgba(0, 0, 0, 0.8);
+    font-size: 0.85em;
+    line-height: 2;
+    padding: 5%;
+    cursor: default;
 }
 
-.project:hover .project-info {
-    opacity: 1;
-    transition: ease 600ms;
+.prj-tags li {
+    padding: 5px;
 }
 
-.links {
-    margin-top: 10px;
+.link {
+    color: var(--theme-color);
 }
 
-.project-info li:hover {
-    font-size: 0.7em;
+.link:hover {
+    color: var(--theme-color2);
 }
 
-.lang {
-    cursor: pointer;
-}
+/* Skills section */
 
-
-.links {
-    padding-top: 10px;
-    letter-spacing: 5px;
-    color: rgba(255, 255, 255, 0.75);
-}
-
-.links a:hover {
-    font-size: 0.9em;
-    color: #fff;
-}
-
-#project1 .lang li:nth-child(1):hover {
-    background: #215732;
-}
-
-#project1 .lang li:nth-child(2):hover {
-    background: #589636;
-}
-
-#project2 .lang li:nth-child(1):hover {
-    background: #2965f1;
-}
-
-#project2 .lang li:nth-child(2):hover {
-    background: #7044a5;
-}
-
-#project3 .lang li:nth-child(1):hover {
-    background: #ac9b1c;
-}
-
-#project3 .lang li:nth-child(2):hover {
-    background: #2e8ac9;
-}
-
-/* Skills */
-#skills {
-    margin-top: 5vw;
+.skills {
+    margin-top: 5%;
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
 
-.front h3,
-.back h3 {
-    margin-bottom: 3.5vw;
+
+#skills div div li {
+    font-size: 0.65em;
+    border: 1px solid grey;
+    padding: 5px;
+    margin-top: 10px;
+    cursor: default;
+    display: inline-block;
 }
 
-.front ul,
-.back ul {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0;
-}
-
-#skills li {
-    font-size: 0.6em;
-    color: rgb(238, 238, 238);
-    padding: 5px 1.75vw;
-    background: #5D5D5D;
-    border-radius: 10vw;
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.15);
-    width: fit-content;
-    margin-right: 3vw;
-    margin-bottom: 3vw;
-}
-
-#skills .front li:hover {
-    background: #2e8ac9;
-}
-
-#skills .back li:hover {
-    background: #953A3A;
-}
-
-#skills li:hover {
-    transform: translateX(4px);
-    background: #85c099;
-    transition: ease 200ms;
-}
-
-/* Contact Page */
-#contact,
-footer {
-    background: #2E2E2E;
-}
-
-.socials {
-    flex-direction: row;
-    width: 50%;
-    justify-content: space-between;
-}
-
-.socials div {
-    background: #5D5D5D;
-    width: 30%;
-    height: 5vw;
-    border-radius: 5vw;
-    overflow: hidden;
+#skills div div li:hover {
+    background: var(--theme-color2);
     color: #fff;
 }
 
-.socials div:nth-child(1) {
-    background: #6e5494;
-}
-
-.socials div:nth-child(2) {
-    background: #dd4b39;
-}
-
-.socials div:nth-child(3) {
-    background: #0077b5;
+hr {
+    margin: 10vmin 0;
+    border: 1px solid rgba(0, 0, 0, 0.3);
 }
 
 
-.status {
-    width: 100%;
-    min-height: 55px;
-    background: rgb(255, 187, 0);
-    position: fixed;
-    z-index: 9999;
+/* Contact page */
+
+#contact {
+    min-height: fit-content;
+}
+
+.contact-form {
+    margin-top: 10vmin;
+}
+
+input,
+textarea,
+button {
+    border-radius: 4px;
+}
+
+input,
+textarea {
+    padding: 3% 10px;
+    height: 7vmin;
+    border: 1px solid rgb(180, 180, 180);
+}
+
+textarea {
+    height: 85%;
+    resize: none;
+}
+
+button {
+    min-height: 38px;
+    padding: 3%;
+    height: 10vmin;
+    border: none;
+    font-size: 0.8rem;
+    text-transform: capitalize;
     color: #fff;
-    display: none;
-    justify-content: space-around;
-    align-items: center;
-    font-size: 0.7em;
+    cursor: pointer;
+}
+
+.submitBtn {
+    background: var(--theme-color2);
+}
+
+.submitBtn:hover {
+    background: var(--bg-gradient);
+}
+
+.cancelBtn {
+    background: rgb(180, 180, 180);
+}
+
+
+label,
+form {
+    display: grid;
+    grid-gap: 3vmin;
+}
+
+form {
+    display: grid;
+    grid-template-areas: 'a b''c c';
+    grid-row-gap: 5vmin;
+}
+
+form label:nth-child(1) {
+    grid-area: a;
+}
+
+form label:nth-child(2) {
+    grid-area: b;
+}
+
+form label:nth-child(3) {
+    grid-area: c;
+}
+
+
+.btnLabel {
+    grid-template-columns: 1fr 1fr;
 }
 
 
 /* Footer */
+
 footer {
-    color: #c4c4c4;
+    font-size: 2.5vmin;
     text-align: center;
-    font-size: 0.6rem;
-    padding: 10px;
-    bottom: 0;
-    margin-top: 10%;
-    z-index: -1;
+    padding: 20px;
 }
 
-footer a {
-    color: var(--light-color);
+footer a,
+#about a {
+    color: var(--theme-color2);
+}
+
+.socials {
+    width: 100%;
+    margin: 10vmin;
+    margin-left: 0;
+    display: inline-block;
+    justify-content: space-between;
+    font-size: 1rem;
+}
+
+.socials i {
+    width: 20%;
+    padding: 3vmin;
+    background: grey;
+    border-radius: 100px;
+    color: #fff;
+    text-align: center;
 }
 
 
+.socials li {
+    display: inline;
+    word-spacing: 10px;
+}
 
+.socials li:nth-child(1) i {
+    background: rgb(110, 84, 148);
+}
 
+.socials li:nth-child(2) i {
+    background: rgb(221, 75, 57);
+}
 
-/* ----------------------------- */
-/*          Mobile Version       */
-/* ----------------------------- */
-
-@media only screen and (max-width: 600px) {
-
-    html,
-    body {
-        width: 100%;
-        font-size: 25px;
-    }
-
-    nav {
-        position: relative;
-    }
-
-    #toggle_menu {
-        display: block;
-        margin: 10px;
-    }
-
-    #toggle_menu i {
-        color: var(--light-color);
-        font-size: 1.5rem;
-    }
-
-    .close {
-        display: none;
-        z-index: 1;
-    }
-
-    nav ul {
-        font-size: 1.2rem;
-        color: var(--light-color);
-        position: absolute;
-        display: none;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        right: 0;
-        background: rgba(0, 0, 0, 0.75);
-        top: 0;
-        width: 100%;
-        height: 100vh;
-    }
-
-    nav ul li {
-        margin-bottom: 10%;
-    }
-
-    .header_img {
-        width: 55%;
-        height: 65%;
-    }
-
-    #dot_nav {
-        display: none;
-    }
-
-    #about .section_wrap {
-        display: grid;
-    }
-
-    #about img {
-        position: initial;
-        grid-row: 3;
-        margin-top: 10px;
-    }
-
-    #about a {
-        margin: 0 auto;
-    }
-
-    #about p {
-        text-align: center;
-        width: 100%;
-        font-size: 1rem;
-        grid-row: 2;
-    }
-
-
-    .projects {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .project {
-        margin-top: 15px;
-        width: 80%;
-        height: 80vw;
-        font-size: 1rem;
-    }
-
-    .project:hover {
-        width: 80%;
-        transition: none;
-    }
-
-    .project-info {
-        opacity: 1;
-        width: 100%;
-        height: 100%;
-    }
-
-    .links {
-        padding-top: 10%;
-        font-size: 2em;
-    }
-
-
-    .socials {
-        width: 100%;
-    }
-
-    .socials div {
-        height: 5vh;
-        min-height: 48px;
-    }
-
-    form {
-        display: grid;
-        position: relative;
-    }
-
-    input {
-        height: 3vh;
-        min-height: 48px;
-        min-width: 48px;
-    }
-
-    textarea {
-        height: 25vh;
-    }
-
-    .submit,
-    .cancel {
-        position: absolute;
-        bottom: -16%;
-        height: 10% !important;
-        min-height: 48px;
-        min-width: 48px;
-        width: 48%;
-        text-align: center;
-    }
-
-    .cancel {
-        right: 0;
-    }
+.socials li:nth-child(3) i {
+    background: rgb(0, 119, 181);
 }
