--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,171 +1,63 @@
-/* ------------------------------------ */
-/*          Responsive Version(s)       */
-/* ------------------------------------ */
-
-@keyframes fade {
-    from {
-        opacity: 0;
-    }
-
-    to {
-        opacity: 1;
-    }
-}
-
 /* Tablet */
+@media only screen and (max-width: 1024px) {
 
-@media only screen and (max-width: 885px) {
-
-    nav ul {
+    /* Navigation / Nav*/
+    .nav-links>ul {
         display: none;
     }
 
-    .burgerMenu,
-    .burgerMenu::before,
-    .burgerMenu::after,
-    .burgerMenuClose,
-    .burgerMenuClose::before {
-        height: 6px;
-        background: var(--bg-gradient);
-        border-radius: 100px;
-        position: absolute;
-        z-index: 2;
-        transition: ease-in 250ms;
+    .mobile-menu {
+        display: inherit;
+        background-image: url('../img/menu.svg');
+        width: 40px;
+        height: 40px;
         cursor: pointer;
     }
 
-    .burgerMenu,
-    .burgerMenuClose {
-        width: 50px;
-        right: 6%;
+    .mobile-menu,
+    .mobile-menu_open,
+    .mobile-links {
+        animation: comeIn 0.3s;
     }
 
-    .burgerMenu {
-        margin-top: -4%;
+    .mobile-menu_open.mobile-menu {
+        background-image: url('../img/ex.svg');
     }
 
-    .burgerMenu::before {
-        content: '';
-        width: 80%;
-        margin-top: 18px;
-        right: 0;
+    .mobile-menu_open .mobile-links {
+        display: inherit !important;
     }
 
-    .burgerMenu::after {
-        content: '';
+    .mobile-links {
+        display: none;
         width: 100%;
-        margin-top: 36px;
+        padding: 1em 0;
+        position: absolute;
         right: 0;
+        top: 4em;
+        text-align: right;
+        overflow: hidden;
     }
 
-
-    .burgerMenuClose {
-        margin-top: -1%;
-        margin-left: 5%;
-        background: var(--bg-gradient);
-        transform: rotate(45deg);
-        position: fixed;
-    }
-
-
-    .burgerMenuClose::before {
-        content: '';
-        width: 100%;
-        top: -16px;
-        right: 0px;
-        transform: rotate(90deg);
-    }
-
-    .burgerMenuClose.burgerMenu::after {
-        width: 0%;
-        opacity: 0;
-    }
-
-
-    .mobile-nav,
-    .mobile-nav li,
-    .mobile-nav .cta {
+    .mobile-links ul {
         display: flex;
         flex-direction: column;
+        justify-content: space-between;
     }
 
-    .mobile-nav {
-        position: fixed;
-        background: rgba(0, 0, 0, 0.8);
-        width: 100vw;
-        height: 100vh;
-        padding: 0;
-        top: 0;
-        left: 0;
-        color: #fff;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        line-height: 4;
-        z-index: 1;
-        animation: fade 500ms;
+    .mobile-links li {
+        padding: 10px;
     }
 
-    .mobile-nav .cta {
-        text-align: center;
-        width: 35%;
-        height: 8vmin;
-        padding: 0 2% 5vmin;
-        align-items: center !important;
-    }
+    @keyframes comeIn {
+        from {
+            transform: translateY(-150%);
+            opacity: 0;
+        }
 
-
-
-    .projects {
-        grid-template-areas:
-            'a b'
-            'c c';
-
-    }
-
-    textarea {
-        height: 90%;
-    }
-
-    #about.global_spacing {
-        margin: auto;
-    }
-}
-
-
-/* Mobile */
-
-@media only screen and (max-width: 700px) {
-
-    .global_spacing {
-        padding: 10%;
-    }
-
-
-    .header-content {
-        padding: 20vh 10%;
-    }
-
-    #about img {
-        width: 30%;
-        margin-top: 10%;
-    }
-
-    .skills {
-        grid-template-columns: 1fr;
-        grid-row-gap: 10vmin;
-    }
-
-    .projects,
-    form {
-        grid-template-areas: 'a''b''c';
-    }
-
-    .projects {
-        margin-top: 10%;
-    }
-
-    textarea {
-        height: 30vh;
+        to {
+            transform: translateY(0);
+            opacity: 1;
+        }
     }
 }
