--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,6 +1,31 @@
 /* Tablet */
 @media only screen and (max-width: 1024px) {
 
+    @keyframes comeIn {
+        from {
+            transform: translateY(-150%);
+            opacity: 0;
+        }
+
+        to {
+            transform: translateY(0);
+            opacity: 1;
+        }
+    }
+
+
+    body {
+        font-size: 14px;
+    }
+
+    .gbl-space {
+        grid-column: 4/32;
+    }
+
+    .gbl-space2 {
+        grid-column: 6/31;
+    }
+
     /* Navigation / Nav*/
     .nav-links>ul {
         display: none;
@@ -30,11 +55,12 @@
 
     .mobile-links {
         display: none;
+        background: #fff;
         width: 100%;
         padding: 1em 0;
         position: absolute;
         right: 0;
-        top: 4em;
+        top: 100%;
         text-align: right;
         overflow: hidden;
     }
@@ -49,15 +75,102 @@
         padding: 10px;
     }
 
-    @keyframes comeIn {
-        from {
-            transform: translateY(-150%);
-            opacity: 0;
-        }
 
-        to {
-            transform: translateY(0);
-            opacity: 1;
-        }
+    /* Header */
+    header {
+        grid-template-columns: 1fr;
+    }
+
+    header.gbl-space2 {
+        padding-top: 100px;
+    }
+
+    header div:nth-child(2)>div>div a {
+        margin-right: 5px;
+    }
+
+    header div:nth-child(2) {
+        grid-column: 1;
+        grid-row: 1;
+        align-self: baseline;
+    }
+
+    header div:nth-child(1) {
+        width: 50vmax;
+        position: absolute;
+        bottom: -20%;
+        right: -10%;
+        z-index: -1;
+    }
+
+    header div:nth-child(1)>div {
+        position: absolute;
+        width: 50vmin;
+        height: 20vmin;
+        bottom: 0;
+        right: 0;
+        background: linear-gradient(0deg, rgba(255, 255, 255, 1) 60%, rgba(255, 255, 255, 0) 100%);
+    }
+
+}
+
+
+/* Medium-size Tablet */
+@media only screen and (max-width: 800px) {
+    .project {
+        grid-template-columns: 1fr;
+    }
+
+    .prj-img {
+        display: flex;
+        justify-content: center;
+    }
+}
+
+
+/* Smaller Tablet */
+@media only screen and (max-width: 650px) {
+    body {
+        font-size: 13px;
+    }
+
+    header div:nth-child(1) {
+        display: none;
+    }
+
+    /* About Section */
+    #about details>div {
+        grid-template-columns: 1fr;
+    }
+
+    #about details>div span {
+        margin-left: 40px;
+        padding: 10px 0;
+    }
+}
+
+
+/* Mobile */
+@media only screen and (max-width: 500px) {
+
+    #about,
+    #projects {
+        text-align: center;
+    }
+
+
+    .prj-content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .prj-tech ul {
+        justify-content: space-evenly;
+        flex-flow: wrap;
+    }
+
+    .prj-tech button {
+        margin: 10px 5px;
     }
 }
